# app/Http/Controllers/TranslationController.php
@@ -8,6 +8,41 @@ use Illuminate\Http\Request;
 
 class TranslationController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path="/api/translation/search",
+     *      operationId="searchTranslation",
+     *      tags={"Translation"},
+     *      summary="Search translation by wordId and value",
+     *      description="Search translation by wordId and value",
+     * @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="val",
+     *                     type="string"
+     *                 ),
+     *                  @OA\Property(
+     *                     property="word_id",
+     *                     type="integer"
+     *                 ),
+     *                 example={"word_id": 403102, "val": ""}
+     *             )
+     *         )
+     *     ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *   security={{"api_key":{}}}
+     *     )
+     *
+     *
+     * @param Request $request
+     * @return \Illuminate\Database\Eloquent\Builder[]|\Illuminate\Database\Eloquent\Collection
+     */
     public function search(Request $request)
     {
         $query = Translation::query();
